参照CR修改翻译

--- a/project/visionos/presenting-windows-and-spaces.yml
+++ b/project/visionos/presenting-windows-and-spaces.yml
@@ -3,31 +3,31 @@
   翻译: '展示窗口和空间'
 - 内容: 'Open and close the scenes that make up your app’s interface.'
   提示: ''
-  翻译: '打开和关闭构成应用界面的场景。'
+  翻译: '打开和关闭组成应用界面的场景。'
 - 内容: 'Overview'
   提示: ''
   翻译: '概述'
 - 内容: 'An app’s scenes, which contain views that people interact with, can take different forms. For example, a scene can fill a window, a tab in a window, or an entire screen. Some scenes can even place views throughout a person’s surroundings. How a scene appears depends on its type, the platform, and the context.'
   提示: ''
-  翻译: '一个应用程序的场，包括了用户与之进行交互的视图，它可以有多样的形式。例如，场景可以填充一个窗口、一个窗口中的选项卡或整个屏幕。有些场景甚至可以将视图置于用户的周围环境中。场景的显示方式取决于其类型、系统平台和上下文。'
+  翻译: '一个应用程序的场景，包括了用户与之进行交互的视图，它可以有多样的形式。例如，场景可以被一个窗口、一个窗口中的选项卡或一整个其他场景所填满。有些场景甚至可以将视图置于用户的周围环境中。场景的出现方式取决于其类型、系统平台和上下文。'
 - 内容: 'When someone launches your app, SwiftUI looks for the first WindowGroup, Window, or DocumentGroup in your app declaration and opens a scene of that type, typically filling a new window or the entire screen, depending on the platform. For example, the following app running in macOS presents a window that contains a MailViewer view:'
   提示: ''
-  翻译: '当用户启动你的 app 时，SwiftUI 会在你的 app 声明中查找首个 WindowGroup 、 Window 或 DocumentGroup ，然后打开该类型的场景，这通常会填充满一个新窗口或整个屏幕，具体取决于系统平台。例如，在 macOS 中运行的以下应用会显示一个包含 MailViewer 视图的窗口：'
+  翻译: '当用户启动你的 app 时，SwiftUI 会在你的 app 声明中查找首个 WindowGroup 、 Window 或 DocumentGroup ，然后打开该类型的场景，通常会用一个新窗口或整个屏幕填充它，具体取决于系统平台。例如，在 macOS 中运行的以下应用会显示一个包含 MailViewer 视图的窗口：'
 - 内容: 'In visionOS, you can alternatively configure your app to open the first ImmersiveSpace that the app declares. In any case, specific platforms and configurations enable you to open more than one scene at a time. Under those conditions, you can use actions that appear in the environment to programmatically open and close the scenes in your app.'
   提示: ''
-  翻译: '在 visionOS 中，您也可以将 app 配置为打开 app 声明的首个 ImmersiveSpace 。在任何情况下，特定的平台和配置都允许您一次打开多个场景。在这些条件下，您可以使用环境中显示的操作以编程方式打开和关闭应用中的场景。'
+  翻译: '在 visionOS 中，您也可以将 app 配置为打开 app 声明的首个 ImmersiveSpace 。在任何情况下，特定的平台和配置都允许您一次打开多个场景。在这些条件下，您可以使用环境中出现的操作人为地打开和关闭应用中的场景。'
 - 内容: 'Check for multiple-scene support'
   提示: ''
   翻译: '检查多场景支持'
 - 内容: 'If you share code among different platforms and need to find out at runtime whether the current system supports displaying multiple scenes, read the supportsMultipleWindows environment value. The following code creates a button that’s hidden unless the app supports multiple windows:'
   提示: ''
-  翻译: '如果您在不同系统平台上共享一套代码，并且需要在运行时了解当前系统是否支持显示多个场景，请读取 supportsMultipleWindows 环境值。以下代码创建了一个按钮，只有在 app 支持多个窗口时按钮才会显示：'
+  翻译: '如果您在不同系统平台上共享一套代码，并且需要在运行时了解当前系统是否支持显示多个场景，请读取 supportsMultipleWindows 环境变量。以下代码创建了一个按钮，只有在 app 支持多个窗口时按钮才会显示：'
 - 内容: 'The value that you read depends on both the platform and how you configure your app:'
   提示: ''
-  翻译: '该值取决于系统平台和配置 app 的方式：'
+  翻译: '你读取到的值由平台和你的 app 配置共同决定：'
 - 内容: 'In macOS, this property returns true for any app that uses the SwiftUI app lifecycle.'
   提示: ''
-  翻译: '在 macOS 中，对于使用 SwiftUI app 生命周期的任何 app，改值返回 true 。'
+  翻译: '在 macOS 中，对于使用 SwiftUI app 生命周期的任何 app，该值返回 true 。'
 - 内容: 'In iPadOS and visionOS, this property returns true for any app that uses the SwiftUI app lifecycle and has the Information Property List key UIApplicationSupportsMultipleScenes set to true, and false otherwise.'
   提示: ''
   翻译: '在 iPadOS 和 visionOS 中，对于使用 SwiftUI app 生命周期且 info plist 中键 UIApplicationSupportsMultipleScenes 设为 true 的任何 app，此属性返回 true ，否则返回 false 。'
@@ -39,10 +39,10 @@
   翻译: '如果您的 app 仅在其中一种情况下运行，则可以默认其采取对应的行为，而无需检查该值。'
 - 内容: 'Enable multiple simultaneous scenes'
   提示: ''
-  翻译: '同时启用多个场景'
+  翻译: '同时启用多个共存场景'
 - 内容: 'You can always present multiple scenes in macOS. To enable an iPadOS or visionOS app to simultaneously display multiple scenes — including ImmersiveSpace scenes in visionOS — add the UIApplicationSupportsMultipleScenes key with a value of true in the UIApplicationSceneManifest dictionary of your app’s Information Property List. Use the Info tab in Xcode for your app’s target to add this key:'
   提示: ''
-  翻译: '您始终可以在 macOS 中呈现多个场景。若要使 iPadOS 或 visionOS 上的 app 能够同时显示多个场景（包括 visionOS 中的 ImmersiveSpace 场景），请在 app 中 info plist 里的 UIApplicationSceneManifest 字典中添加值为 true 的 UIApplicationSupportsMultipleScenes 键。在 Xcode 中，选择 app 的一个 target 的 info 标签页以添加此键：'
+  翻译: '您始终可以在 macOS 中呈现多个场景。若要使 iPadOS 或 visionOS 上的 app 能够同时显示多个场景（包括 visionOS 中的 ImmersiveSpace 场景），请在 app 中 info.plist 里的 UIApplicationSceneManifest 字典中添加值为 true 的 UIApplicationSupportsMultipleScenes 键。在 Xcode 中，选择你 app 对应的一个 target 的 info 标签页以添加此键：'
 - 内容: 'Apps on other platforms can display only one scene during their lifetime.'
   提示: ''
   翻译: '其他平台上的 app 在其生命周期内只能显示一个场景。'
@@ -78,28 +78,28 @@
   翻译: '由于当您打开 ImmersiveSpace 场景时，您的应用在 ImmersiveSpace 中运行，因此您一次只能打开一个此类场景。如果尝试在空间已存在时再次打开空间，系统将记录一个运行时错误。'
 - 内容: 'Your app can display any number of windows together with an immersive space. However, when you open a space from your app, the system hides all windows that belong to other apps. After you dismiss your space, the other apps’ windows reappear. Similarly, the system hides your app’s windows if another app opens an immersive space.'
   提示: ''
-  翻译: '你的 app 可以显示任意数量的窗口以及沉浸式空间。但是，当您从 app 中打开空间时，系统会隐藏属于其他应用程序的所有窗口。关闭您的 app 的空间后，其他应用的窗口会重新显示。同样地，如果另一个 app 打开沉浸式空间，系统会隐藏您的 app 的窗口。'
+  翻译: '你的 app 可以在一个沉浸式空间中显示任意数量的窗口。。但是，当您从 app 中打开空间时，系统会隐藏属于其他应用程序的所有窗口。关闭您的 app 的空间后，其他应用的窗口会重新显示。同样地，如果另一个 app 打开沉浸式空间，系统会隐藏您的 app 的窗口。'
 - 内容: 'Designate a space as your app’s main interface'
   提示: ''
   翻译: '将空间指定为 app 的主界面'
 - 内容: 'When visionOS launches an app, it opens the first window group, window, or document scene that the app’s body declares, just like on other platforms. This is true even if you first declare a space. However, if you want to open your app into an immersive space directly, specify a space as the default scene for your app by adding the UIApplicationPreferredDefaultSceneSessionRole key to your app’s information property list and setting its value to UISceneSessionRoleImmersiveSpaceApplication. In that case, visionOS opens the first space that it finds in your app declaration.'
   提示: ''
-  翻译: '当 visionOS 启动一个 app 时，它会打开 app 的 body 中声明的第一个窗口组、窗口或文档场景，就像在其他系统平台上一样。即使您先声明的是一个空间，也是如此。但是，如果要直接在沉浸式空间中打开 app，请将 UIApplicationPreferredDefaultSceneSessionRole 键添加到 app 的 info plist 中并将其值设置为 UISceneSessionRoleImmersiveSpaceApplication ，从而将空间指定为 app 的默认场景。在这种情况下，visionOS 会打开它在 app 声明中找到的第一个空间。'
+  翻译: '当 visionOS 启动一个 app 时，它会打开 app 的 body 中声明的第一个窗口组、窗口或文档场景，就像在其他系统平台上一样。即使您先声明的是一个空间，也是如此。但是，如果要直接在沉浸式空间中打开 app，请将 UIApplicationPreferredDefaultSceneSessionRole 键添加到 app 的 info.plist 中并将其值设置为 UISceneSessionRoleImmersiveSpaceApplication ，从而将空间指定为 app 的默认场景。在这种情况下，visionOS 会打开它在 app 声明中找到的第一个空间。'
 - 内容: 'Important'
   提示: ''
   翻译: '重要'
 - 内容: 'Be careful not to overwhelm people when starting your app with an immersive space. For design guidance, see Immersive experiences.'
   提示: ''
-  翻译: '在以沉浸式空间启动 app 时，避免用户产生不知所措的感觉。有关设计指南，请参阅沉浸式体验。'
+  翻译: '在以沉浸式空间启动 app 时，避免用户产生不知所措的感觉。有关设计指南，请参阅《沉浸式体验》。'
 - 内容: 'Close windows programmatically'
   提示: ''
   翻译: '以编程方式关闭窗口'
 - 内容: 'People can close windows using system controls, like the close button built into the frame around a macOS window. You can also close windows programmatically. Get the dismissWindow action from the environment, and call it using the identifier of the window that you want to dismiss:'
   提示: ''
-  翻译: '用户可以使用系统自带的控件关闭窗口，例如 macOS 窗口周围框架中内置的关闭按钮。您当然也可以以编程方式关闭窗口。从环境中获取 dismissWindow 操作，并使用要关闭的窗口的标识符来调用它：'
+  翻译: '用户可以使用系统自带的控件关闭窗口，例如 macOS 窗口上面系统默认的关闭按钮。您当然也可以以编程方式关闭窗口。从环境中获取 dismissWindow 操作，并使用要关闭的窗口的标识符来调用它：'
 - 内容: 'In iPadOS and visionOS, the system ignores the dismiss action if you use it to close a window that’s your app’s only open scene.'
   提示: ''
-  翻译: '在 iPadOS 和 visionOS 中，如果某一个窗口是您的 app 的唯一场景时，对其调用该关闭操作，系统会忽略该操作。'
+  翻译: '在 iPadOS 和 visionOS 中，如果要关闭是当前 app 唯一打开的场景，系统会忽略该操作。'
 - 内容: 'Close spaces programmatically'
   提示: ''
   翻译: '以编程方式关闭空间'
