--- a/project/visionos/adopting-best-practices-for-privacy.yml
+++ b/project/visionos/adopting-best-practices-for-privacy.yml
@@ -45,7 +45,7 @@
   翻译: '在提供涉及隐私的功能时，请明确提供清晰的声明信息。'
 - 内容: 'The following ARKit features require you to provide a usage description string in your app’s Info.plist file:'
   提示: ''
-  翻译: '在使用以下 ARKit 功能时，需要您在应用的 Info.plist 文件中提供使用描述的字符串：'
+  翻译: '在使用以下 ARKit 功能时，需要您在应用的 Info.plist 文件中提供提供字符串来描述使用目的：'
 - 内容: 'World-tracking data'
   提示: ''
   翻译: '世界追踪数据'
@@ -54,7 +54,7 @@
   翻译: '手部追踪数据'
 - 内容: 'Other privacy-sensitive technologies in visionOS also require you to supply usage description strings. For example, you provide usage descriptions for the Core Location features you adopt. These strings communicate why your app needs the data, and how you plan to use the data to help the person using your app. The first time you request authorization to use the technology, the system prompts the person to grant or deny access to your app. The system includes your usage-description string in the dialog it displays.'
   提示: ''
-  翻译: '在 visionOS 中，其他和隐私相关的技术也需要您提供使用描述字符串。例如，您需要为产品所采用的 Core Location 功能提供使用说明。这些字符串应该能清楚地说明您的应用为何需要这些数据，以及您计划如何使用这些数据来帮助用户使用产品。当您首次请求使用某项技术的授权时，系统会提示用户是否授权您的应用访问。系统显示的对话框中将会包含您的使用描述字符串。'
+  翻译: '在 visionOS 中，其他和隐私相关的技术也需要您提供使用描述字符串。例如，你需要为应用中使用 Core Location 功能的原因提供使用说明。这些字符串应该能清楚地说明您的应用为何需要这些数据，以及您计划如何使用这些数据来帮助用户使用产品。当您首次请求使用某项技术的授权时，系统会提示用户是否授权您的应用使用。系统显示的对话框中将会包含您的使用描述字符串。'
 - 内容: 'For information about requesting access to ARKit data, see ARKit. For guidance on how to craft good messages around privacy-friendly features, see Human Interface Guidelines.'
   提示: ''
   翻译: '有关请求访问 ARKit 数据的信息，请参阅 ARKit 文档。有关如何撰写隐私友好的撰写良好信息的指南，请参阅“人机界面指南”。'
