修改一些错误

--- a/project/visionos/understanding-the-realitykit-modular-architecture.yml
+++ b/project/visionos/understanding-the-realitykit-modular-architecture.yml
@@ -3,12 +3,12 @@
   翻译: '了解如何构建 RealityKit 模块'
 - 内容: 'Learn how everything fits together in RealityKit.'
   提示: ''
-  翻译: '了解在RealityKit中一切如何相互配合'
+  翻译: '理解在RealityKit中一切如何相互配合'
 - 内容: 'Overview'
   提示: ''
   翻译: '概览'
 - 内容: 'RealityKit is a 3D framework designed for building apps, games, and other immersive experiences. Although it’s built in an object-oriented language and uses object-oriented design principles, RealityKit’s architecture avoids heavy use of composition — where objects are built by adding instance variables that hold references to other objects — in favor of a modular design based on a paradigm called Entity Component System (ECS) that divides application objects into one of three types.'
-  提示: '译者注：本文中的“系统”，除非特别指明 visionOS ，否则默认是 ECS 中的“系统 System”，下面“创建系统以执行实体行为”小节会做详。Entity Component System ( ECS ), “实体-组件-系统”是一种软件体系结构模式，主要用于视频游戏开发中，用于表示游戏世界对象。ECS包括由数据组件组成的实体，以及在实体组件上运行的系统。ECS遵循组合优于继承的原则，这意味着每个实体不是由类型层次结构定义的，而是由与其关联的组件定义的。系统对具有所需组件的所有实体进行全局操作。'
+  提示: '译者注：本文中的“系统”，除非特别指明 visionOS ，否则默认是 ECS 中的“系统 System ”，下面“创建系统以执行实体行为”小节会做详细介绍“系统”； Entity Component System ( ECS ), “实体-组件-系统”是一种软件体系结构模式，主要用于视频游戏开发中，用于表示游戏世界对象。ECS包括由数据组件组成的实体，以及在实体组件上运行的系统。ECS遵循组合优于继承的原则，这意味着每个实体不是由类型层次结构定义的，而是由与其关联的组件定义的。系统对具有所需组件的所有实体进行全局操作。'
   翻译: 'RealityKit 是专为构建应用程序、游戏和其他沉浸式体验而设计的 3D 框架。虽然，它是使用面向对象的编程语言和设计原则，但是 RealityKit 采用了“实体-组件-系统”架构范式，将应用程序中对象分为 “实体 Entity ”，“组件 Component ”，”系统 System “三种，从而避免“组合模式”的繁重设计——通过添加实例变量来持有其他对象引用从而构建对象。'
 - 内容: 'Following the ECS paradigm allows you to re-use the functionality contained in a component in many different entities, even if they have very different inheritance chains. Even if two objects have no common ancestors other than Entity, you can add the same components to both of them and give them the same behavior or functionality.'
   提示: ''
