fix: adopt suggested changes

--- a/project/visionos/world.yml
+++ b/project/visionos/world.yml
@@ -9,10 +9,10 @@
   翻译: "概述"
 - 内容: "You can use visionOS scene types and styles to share information in fun and compelling ways. Features like volumes and immersive spaces let you put interactive virtual objects into people’s environments, or put people into a virtual environment."
   提示: ""
-  翻译: "您可以使用 visionOS 场景类型和样式，以有趣且引人入胜的方式传达信息。体量和沉浸式空间等功能可以让你可交互的虚拟物体放入用户的环境中，或反之将用户置于虚拟环境中。"
+  翻译: "您可以使用 visionOS 场景类型和样式，以有趣且引人入胜的方式传达信息。体量和沉浸式空间等功能可以让你将可交互的虚拟物体放入用户的环境中，或反之将用户置于虚拟环境中。"
 - 内容: "Hello World uses these tools to teach people about the Earth — the planet we call home. The app shows how the Earth’s tilt creates the seasons, how objects move as they orbit the Earth, and how Earth appears from space."
   提示: ""
-  翻译: "Hello World 使用了这些工具向人们介绍地球--这个我们称之为家的星球。该应用程序展示了地球的倾斜角如何形成季节，物体如何围绕地球运行，以及地球在整个太空中的样子。"
+  翻译: "Hello World 使用了这些工具向人们介绍地球--这个我们称之为家的星球。该应用程序展示了地球的倾斜角如何形成季节，物体如何围绕地球运行，以及地球在太空中的样子。"
 - 内容: "The app uses SwiftUI to define its interface, including both 2D and 3D elements. To create, customize, and manage 3D models and effects, it also relies on the RealityKit framework and Reality Composer Pro."
   提示: ""
   翻译: "该应用程序使用 SwiftUI 来制作其用户界面，其中包含了 2D 和 3D 元素。为了创建、自定义和管理 3D 模型和效果，它还依赖于 RealityKit 框架和 Reality Composer Pro。"
@@ -24,7 +24,7 @@
   翻译: "Hello World 使用了 WindowGroup 来构建启动时显示的场景（WorldApp 结构体中出现的第一个场景）："
 - 内容: "Like other platforms — for example, macOS and iOS — visionOS displays a window group as a familiar-looking window. In visionOS, people can resize and move windows around the Shared Space. Even if your app offers a sophisticated 3D experience, a window is a great starting point for an app because it eases people into the experience. It’s also a good place to provide instructions or controls."
   提示: ""
-  翻译: "与其他平台（如 macOS 和 iOS）一样，visionOS 将窗口组显示为用户熟悉的窗口。在 visionOS 中，用户可以在**共享空间**中调整窗口大小并移动窗口。即使你的应用提供了复杂的 3D 体验，窗口也是应用的一个很好的起点，因为它可以让用户由浅入深地顺利进入体验。同时窗口也是提供说明或放置控件的理想位置。"
+  翻译: "与其他平台（如 macOS 和 iOS）一样，visionOS 将窗口组显示为用户熟悉的窗口。在 visionOS 中，用户可以在共享空间中调整窗口大小并移动窗口。即使你的应用提供了复杂的 3D 体验，窗口也是应用的一个很好的起点，因为它可以让用户由浅入深地顺利进入体验。同时窗口也是提供说明或放置控件的理想位置。"
 - 内容: "Tip"
   提示: ""
   翻译: "提示"
@@ -51,10 +51,10 @@
   翻译: "在新场景中显示可交互的地球仪"
 - 内容: "The globe module opens with a few facts about the Earth in the main window next to a decorative, flat image that supports the content. To help people understand even more, the module includes a button titled View Globe that opens a 3D interactive globe in a new window."
   提示: ""
-  翻译: '当地球仪(globe)模块打开时，主窗口中会显示一些有关地球的知识，旁边装饰着一个解释内容的平面图像。为了帮助用户更好地理解，该模块包含了一个名为"View Globe"的按钮，该按钮可在新窗口中打开一个三维交互式的地球仪。'
+  翻译: "当地球仪（globe）模块打开时，主窗口中会显示一些有关地球的知识，旁边装饰着一个解释内容的平面图像。为了帮助用户更好地理解模块内容，该模块包含了一个名为“View Globe”的按钮，该按钮可在新窗口中打开一个三维交互式的地球仪。"
 - 内容: "To be able to open multiple scene types, Hello World includes the UIApplicationSceneManifest key in its Information Property List file. The value for this key is a dictionary that includes the UIApplicationSupportsMultipleScenes key with a value of true:"
   提示: ""
-  翻译: "为了能够打开多种场景类型，Hello World 在其信息属性列表(Information Property List)文件中包含了 UIApplicationSceneManifest 键。该键的值是一个字典，其中包含了 UIApplicationSupportsMultipleScenes 键，且其值为：true"
+  翻译: "为了能够打开多种场景类型，Hello World 在其 Information Property List 文件中包含了 UIApplicationSceneManifest 键。该键的值是一个字典，其中包含了 UIApplicationSupportsMultipleScenes 键，且其值为：true"
 - 内容: "Declare a volumetric window for the globe"
   提示: ""
   翻译: "为地球仪定义一个三维窗口"
@@ -123,7 +123,7 @@
   翻译: "为创建这一效果，应用在 mix 沉浸风格的 ImmersiveSpace 场景中展示了 Orbit 视图--其中包含了一个模拟整套系统的 RealityView："
 - 内容: "As with any secondary scene in a visionOS app, this scene depends on having the UIApplicationSupportsMultipleScenes key in the Information Property List file. The app also opens and closes the space using a toggle view that resembles the one used for the globe:"
   提示: ""
-  翻译: "与 visionOS 应用中的所有辅助场景一样，此场景依赖于“信息属性列表”文件中的 UIApplicationSupportsMultipleScenes 键。同时，应用还使用了与地球仪模组中类似的开关开关按钮来打开和关闭空间："
+  翻译: "与 visionOS 应用中的所有辅助场景一样，此场景依赖于 Information Property List file 文件中的 UIApplicationSupportsMultipleScenes 键。同时，应用还使用了与地球仪模组中类似的开关开关按钮来打开和关闭空间："
 - 内容: "There are a few key differences from the version that appears in the section Open and dismiss the globe window:"
   提示: ""
   翻译: "这里与“打开和关闭地球仪窗口”一节中的版本有几个主要区别："
