fix:：修改标点符号

--- a/project/visionos/world.yml
+++ b/project/visionos/world.yml
@@ -1,6 +1,6 @@
 - 内容: "Hello World"
   提示: ""
-  翻译: "你好，世界 (Hello World)"
+  翻译: "你好，世界 （Hello World）"
 - 内容: "Use windows, volumes, and immersive spaces to teach people about the Earth."
   提示: ""
   翻译: "使用窗口、体量和沉浸式空间让人们了解地球。"
@@ -36,16 +36,16 @@
   翻译: "使用导航栈展示不同的模块"
 - 内容: "After you watch a brief introductory animation that shows the text Hello World typing in, the Modules view that defines the primary scene’s content presents options to explore different aspects of the world. This view contains a table of contents at the root of a NavigationStack:"
   提示: ""
-  翻译: "在观看键入文本 Hello World 的简短介绍动画后，定义主场景内容的 Modules 视图会显示多种探索世界的选项。此视图包含了一个导航栈(NavigationStack)，导航栈的根视图是一个目录："
+  翻译: "在观看键入文本 Hello World 的简短介绍动画后，定义主场景内容的 Modules 视图会显示多种探索世界的选项。此视图包含了一个导航栈 （NavigationStack），导航栈的根视图是一个目录："
 - 内容: "A visionOS navigation stack has the same behavior that it has in other platforms. When it first appears, the stack displays its root view. When someone chooses an embedded NavigationLink, the stack draws a new view and displays a back button in the toolbar. When someone taps the back button, the stack restores the previous view."
   提示: ""
-  翻译: "visionOS 导航栈与其他平台的导航栈具有相同的行为。当它首次出现时，导航栈会显示其根视图。当用户点击内嵌的导航链接(NavigationLink) 时，导航栈会绘制一个新视图并在工具栏中显示一个后退按钮。当用户点击后退按钮时，导航堆将恢复上一个视图。"
+  翻译: "visionOS 导航栈与其他平台的导航栈具有相同的行为。当它首次出现时，导航栈会显示其根视图。当用户点击内嵌的导航链接 （NavigationLink） 时，导航栈会绘制一个新视图并在工具栏中显示一个后退按钮。当用户点击后退按钮时，导航堆将恢复上一个视图。"
 - 内容: "The trailing closure of the navigationDestination(for:destination:) view modifier in the code above displays a view when someone activates a link based on a module input that comes from the corresponding link’s initializer:"
   提示: ""
   翻译: "上面代码中的 navigationDestination(for:destination:) 视图修饰符的尾部闭包，会根据链接初始化时传入的模块，在用户激活链接时显示相应的视图："
 - 内容: "The possible module values come from a custom Module enumeration:"
   提示: ""
-  翻译: "可选的模块值来自于自定义的 Module 枚举："
+  翻译: "可选的模块值来源于自定义的 Module 枚举："
 - 内容: "Display an interactive globe in a new scene"
   提示: ""
   翻译: "在新场景中显示可交互的地球仪"
@@ -63,10 +63,10 @@
   翻译: "在上述键值就位后，应用程序就可以在其 App 声明中使用第二个 WindowGroup 了。这个新窗口组使用视图 Globe 作为其内容："
 - 内容: "This window group creates a window that has arbitrary depth — great for displaying a 3D model in a bounded region that behaves like a transparent box — because Hello World uses the volumetric window style scene modifier. People can move this box around the Shared Space like any other window, and the content remains fixed inside. The defaultSize(width:height:depth:in:) modifier specifies a size for the window in meters, including a depth dimension."
   提示: ""
-  翻译: "由于 Hello World 使用了三维(volumetric)窗口样式场景修饰符，因此该窗口组创建了一个可自定义深度的窗口--非常适合在有边界的区域中显示三维模型，其行为就像一个透明的盒子。用户可以像移动任何其他窗口一样在共享空间中移动这个盒子，而里面的内容则保持不变。defaultSize(width:height:depth:in:) 修饰符用来指定窗口的（包含深度的）大小（以米为单位）。"
+  翻译: "由于 Hello World 使用了三维 （volumetric） 窗口样式场景修饰符，因此该窗口组创建了一个可自定义深度的窗口--非常适合在有边界的区域中显示三维模型，其行为就像一个透明的盒子。用户可以像移动任何其他窗口一样在共享空间中移动这个盒子，而里面的内容则保持不变。defaultSize(width:height:depth:in:) 修饰符用来指定窗口的（包含深度的）大小（以米为单位）。"
 - 内容: "The Globe view contains 3D content, but is still just a SwiftUI view. It contains two elements in a ZStack: a subview that draws a model of the Earth, and another that provides a control panel that people can use to configure the model’s appearance."
   提示: ""
-  翻译: "该 Globe 视图虽然包含了 3D 内容，但其本身仍然只是一个 SwiftUI 视图。它 ZStack 中包含了两个元素： 一个绘制地球模型的子视图，另一个子视图负责提供控制面板，用户可以使用它来配置地球仪的外观。"
+  翻译: "该 Globe 视图虽然包含了 3D 内容，但其本身仍然只是一个 SwiftUI 视图。它 ZStack 中包含了两个元素：一个绘制地球模型的子视图，另一个子视图负责提供控制面板，用户可以使用它来配置地球仪的外观。"
 - 内容: "Open and dismiss the globe window"
   提示: ""
   翻译: "打开和关闭地球仪窗口"
@@ -75,31 +75,31 @@
   翻译: "地球仪模块显示了一个 View Globe 按钮。当用户点击该按钮后，系统会根据当前状态来显示三维窗口或关闭窗口。Hello World 通过创建一个按钮样式的 Toggle，并将其嵌入到自定义 GlobeToggle 视图中来实现这一功能。"
 - 内容: "When someone taps the toggle, the isShowingGlobe state changes, and the onChange(of:initial:_:) modifier calls the openWindow or dismissWindow action to open or dismiss the window, respectively. The view gets these actions from the environment and uses an identifier that matches the window’s identifier."
   提示: ""
-  翻译: "当用户点击切换按钮时， isShowingGlobe 状态会发生变化， 且onChange(of:initial:_:) 修饰符会分别调用 openWindow or dismissWindow 操作来打开或关闭窗口。视图从环境变量中获取这些操作，并使用对应的窗口标识符。"
+  翻译: "当用户点击切换按钮时，isShowingGlobe 状态会发生变化， 且 onChange(of:initial:_:) 修饰符会分别调用 openWindow 或 dismissWindow 操作来打开或关闭窗口。视图从环境变量中获取这些操作，并使用对应的窗口标识符来运行操作。"
 - 内容: "Display objects that orbit the Earth"
   提示: ""
   翻译: "显示绕地球运行的物体"
 - 内容: "You use windows in visionOS the same way you do in other platforms. But windows in visionOS provide a small amount of depth you can use to create 3D effects — like elements that appear in front of other elements. Hello World takes advantage of this depth to present small models inline with 2D content."
   提示: ""
-  翻译: "在 visionOS 中使用窗口的方式与其他平台相同。但是，visionOS 中的窗口提供了可用于创建 3D 效果的少量深度，--比如摆放在其他元素前的元素。Hello World 利用这种深度来在 2D 内容的行间展示小的 3D 模型。"
+  翻译: "在 visionOS 中使用窗口的方式与其他平台相同。但是，visionOS 中的窗口提供了可用于创建 3D 效果的少量深度--比如摆放在其他元素前的元素。Hello World 利用这种深度来在 2D 内容的行间展示小的 3D 模型。"
 - 内容: "The app’s second module, Objects in Orbit, provides information about objects that go around the Earth, like the Moon and artificial satellites. To give a sense of what these objects look like, the module displays 3D models of these items directly inside the window."
   提示: ""
-  翻译: "应用的第二个模块，“轨道上的物体” (Objects in Orbit) 提供了月球和人造卫星等绕地球飞行的物体的信息。为了让用户了解这些对象的外观，该模块直接在窗口内显示这些对象的 3D 模型。"
+  翻译: "应用的第二个模块，“轨道上的物体”（Objects in Orbit）提供了月球和人造卫星等绕地球飞行的物体的信息。为了让用户了解这些对象的外观，该模块直接在窗口内显示这些对象的 3D 模型。"
 - 内容: "Hello World loads these models from the asset bundle using a Model3D structure inside a custom ItemView. The view scales and positions the model to fit the available space, and applies optional orientation adjustments:"
   提示: ""
   翻译: "Hello World 在自定义的 ItemView 中使用 Model3D 结构体从资源包里加载这些模型。视图会根据可用空间对模型进行缩放和定位，并视情况调整角度："
 - 内容: "The app uses this ItemView once for each model, placing each in an overlay that only becomes visible based on the current selection. For example, the following overlay displays the satellite model with a small amount of tilt in the x-axis and z-axis:"
   提示: ""
-  翻译: "该应用为每个模型都创建了上述的 ItemView，并将它们放在一个叠加层中， 且只有当前被选中的模型才会显示出来。例如，下述的叠加层显示了一个在 x 轴和 z 轴上有稍微倾斜卫星模型："
+  翻译: "该应用为每个模型都创建了上述的 ItemView，并将它们放在一个叠加层中， 且只有当前被选中的模型会显示出来。例如，下述的叠加层显示了一个在 x 轴和 z 轴上有稍微倾斜卫星模型："
 - 内容: "The VStack that contains the models also contains a Picker that people use to select a model to view:"
   提示: ""
-  翻译: "包含上述模型的 VStack 中还包含了一个 Picker ，用来选择查看的模型："
+  翻译: "包含上述模型的 VStack 中还包含了一个 Picker，用来选择查看的模型："
 - 内容: "When you add 3D effects to a 2D window, keep this guidance in mind:"
   提示: ""
   翻译: "当你向 2D 窗口添加 3D 效果时，请牢记以下几点："
 - 内容: "Don’t overdo it. These kinds of effects add interest, but can unintentionally obscure important controls or information as people view the window from different directions."
   提示: ""
-  翻译: "不要过度使用。这种类型的效果虽然增加了趣味性，但当用户从不同方向查看窗口时，有可能会无意中遮挡重要控件或信息。"
+  翻译: "不要过度使用。这种类型的效果虽然增加了趣味性，但当用户从不同方向查看窗口时，这些效果有可能会无意中遮挡重要控件或信息。"
 - 内容: "Ensure that elements don’t exceed the available depth. Excess depth causes elements to clip. Account for any position or orientation changes that might occur after initial placement."
   提示: ""
   翻译: "确保元素不超出可用深度。过大的深度会导致元素被剪切。要考虑到初始放置后可能发生的位置或角度变化。"
@@ -129,7 +129,7 @@
   翻译: "这里与“打开和关闭地球仪窗口”一节中的版本有几个主要区别："
 - 内容: "OrbitToggle uses openImmersiveSpace and dismissImmersiveSpace from the environment, rather than the window equivalents."
   提示: ""
-  翻译: "OrbitToggle 使用了环境变量 openImmersiveSpace 和 dismissImmersiveSpace，而不是窗口操作。"
+  翻译: "OrbitToggle 使用了环境变量 openImmersiveSpace 和 dismissImmersiveSpace 操作，而不是窗口操作。"
 - 内容: "The dismiss action in this case doesn’t require an identifier, because people can only open one space at a time, even across apps."
   提示: ""
   翻译: "这时关闭操作不需要标识符，因为用户一次只能打开一个沉浸式空间，即使切换应用也是如此。"
@@ -141,7 +141,7 @@
   翻译: "使用完全浸入式从太空观察太阳系"
 - 内容: "The app’s final module gives people a sense of the Earth’s place in the solar system. Like other modules, this one includes information and a decorative image next to a button that leads to another visualization — in this case so people can experience Earth from space."
   提示: ""
-  翻译: "应用的最后一个模块意在帮助用户了解地球在太阳系中的位置。与其他模块一样，这个模块包括了说明、装饰图像、及一个指向另一个场景的按钮 - 在本模块中，用户可以从太空中体验地球。"
+  翻译: "应用的最后一个模块意在帮助用户了解地球在太阳系中的位置。与其他模块一样，这个模块包括了说明、装饰图像、及一个指向另一个场景的按钮--在本模块中，用户可以从太空中观望地球。"
 - 内容: "When a person taps the button, the app takes over the entire display and shows stars in all directions. The Earth appears directly in front, the Moon to the right, and the Sun to the left. The main window also shows a small control panel that people can use to exit the fully immersive experience."
   提示: ""
   翻译: "当用户点击按钮后，应用将接管整个显示屏，并在各个方位显示星星。地球出现在正前方，月球在右侧，太阳在左侧。主窗口还显示了一个小型控制面板，用户可以用它来退出完全沉浸式体验。"
