--- a/project/visionos/world.yml
+++ b/project/visionos/world.yml
@@ -138,7 +138,7 @@
   翻译: "打开和关闭空间操作是异步的，因此它们的使用出现在 Task 闭包中。"
 - 内容: "View the solar system from space using full immersion"
   提示: ""
-  翻译: "使用完全浸入式从太空观察太阳系"
+  翻译: "使用完全沉浸式从太空观察太阳系"
 - 内容: "The app’s final module gives people a sense of the Earth’s place in the solar system. Like other modules, this one includes information and a decorative image next to a button that leads to another visualization — in this case so people can experience Earth from space."
   提示: ""
   翻译: "应用的最后一个模块意在帮助用户了解地球在太阳系中的位置。与其他模块一样，这个模块包括了说明、装饰图像、及一个指向另一个场景的按钮--在本模块的场景中，用户可以从太空中观察地球。"
