--- a/project/visionos/understanding-the-realitykit-modular-architecture.yml
+++ b/project/visionos/understanding-the-realitykit-modular-architecture.yml
@@ -3,13 +3,13 @@
   翻译: '了解如何构建 RealityKit 模块'
 - 内容: 'Learn how everything fits together in RealityKit.'
   提示: ''
-  翻译: '理解在RealityKit中一切如何相互配合'
+  翻译: '理解在 RealityKit 中一切如何相互配合'
 - 内容: 'Overview'
   提示: ''
   翻译: '概览'
 - 内容: 'RealityKit is a 3D framework designed for building apps, games, and other immersive experiences. Although it’s built in an object-oriented language and uses object-oriented design principles, RealityKit’s architecture avoids heavy use of composition — where objects are built by adding instance variables that hold references to other objects — in favor of a modular design based on a paradigm called Entity Component System (ECS) that divides application objects into one of three types.'
-  提示: '译者注：本文中的“系统”，除非特别指明 visionOS ，否则默认是 ECS 中的“系统 System ”，下面“创建系统以执行实体行为”小节会做详细介绍“系统”； Entity Component System ( ECS ), “实体-组件-系统”是一种软件体系结构模式，主要用于视频游戏开发中，用于表示游戏世界对象。ECS包括由数据组件组成的实体，以及在实体组件上运行的系统。ECS遵循组合优于继承的原则，这意味着每个实体不是由类型层次结构定义的，而是由与其关联的组件定义的。系统对具有所需组件的所有实体进行全局操作。'
-  翻译: 'RealityKit 是专为构建应用程序、游戏和其他沉浸式体验而设计的 3D 框架。虽然，它是使用面向对象的编程语言和设计原则，但是 RealityKit 采用了“实体-组件-系统”架构范式，将应用程序中对象分为 “实体 Entity ”，“组件 Component ”，”系统 System “三种，从而避免“组合模式”的繁重设计——通过添加实例变量来持有其他对象引用从而构建对象。'
+  提示: '译者注：本文中的“系统”，除非特别指明 VisionOS ，否则默认是 ECS 中的“系统 System ”，下面“创建系统以执行实体行为”小节会做详细介绍“系统”； Entity Component System ( ECS ), “实体-组件-系统”是一种软件体系结构模式，主要用于视频游戏开发中，用于表示游戏世界对象。ECS包括由数据组件组成的实体，以及在实体组件上运行的系统。ECS遵循组合优于继承的原则，这意味着每个实体不是由类型层次结构定义的，而是由与其关联的组件定义的。系统对具有所需组件的所有实体进行全局操作。'
+  翻译: 'RealityKit 是专为构建应用程序、游戏和其他沉浸式体验而设计的 3D 框架。虽然，它是使用面向对象的编程语言和设计原则，但是 RealityKit 采用了 “实体-组件-系统” 架构范式，将应用程序中对象分为 “实体 Entity ”，“组件 Component ”，”系统 System “三种，从而避免“组合模式”的繁重设计——通过添加实例变量来持有其他对象引用从而构建对象。'
 - 内容: 'Following the ECS paradigm allows you to re-use the functionality contained in a component in many different entities, even if they have very different inheritance chains. Even if two objects have no common ancestors other than Entity, you can add the same components to both of them and give them the same behavior or functionality.'
   提示: ''
   翻译: '遵循 ECS 范式可以在有着各不相同的继承链的实体之间中重用同一个组件中的功能。又或者是在除了 Entity 之外没有共同祖先的两个对象中添加同一组件，以赋予它们相同的“行为”或“功能”。'
@@ -36,10 +36,10 @@
   翻译: '创建系统以执行实体行为'
 - 内容: 'A System contains code that RealityKit calls on every frame to implement a specific type of entity behavior or to update a particular type of entity state. Systems use components to store their entity-specific state and query for entities to act on by looking for ones with a specific component or combination of components.'
   提示: ''
-  翻译: '系统包含 实现特定类型实体的行为，或者 更新特殊类型实体的状态 的代码，而 RealityKit 会在每帧调用“系统”的代码。系统使用组件存储实体特定状态，同时可以通过 某种类型组件 或者 多种类型组件组合 查询需要进行操作的实体。'
+  翻译: '系统包含实现特定类型实体的行为，或者更新特殊类型实体的状态的代码，而 RealityKit 会在每帧调用“系统”的代码。系统使用组件存储实体特定状态，同时可以通过某种类型组件或者多种类型组件组合查询需要进行操作的实体。'
 - 内容: 'For example, a game might have a damage system that monitors and updates the health of every entity that can be damaged or destroyed. Systems typically work together with one or more components, so that damage system might use a health component to keep track of how much damage each entity has taken and how much each one is able to take before it’s destroyed. It might also interact with other components. For example, an entity might have an armor component that provides protection to the entity, and the damage system would also need to use the state stored in that component.'
   提示: ''
-  翻译: '例如，游戏可以通过 伤害系统 监听和更新实体生命值，这样实体就可以被伤害或者被毁灭。系统会通常操作一个或多个组件，所以伤害系统通过生命值组件 记录每个实体受到的伤害值，以及每个实体在被毁灭之前还能承受多少伤害。系统也会和其他的组件交互。比如，实体也可以有保护作用的盔甲组件，这时伤害系统也会去使用该组件存储的状态值。'
+  翻译: '例如，游戏可以通过伤害系统监听和更新实体生命值，这样实体就可以被伤害或者被毁灭。系统会通常操作一个或多个组件，所以伤害系统通过生命值组件 记录每个实体受到的伤害值，以及每个实体在被毁灭之前还能承受多少伤害。系统也会和其他的组件交互。比如，实体也可以有保护作用的盔甲组件，这时伤害系统也会去使用该组件存储的状态值。'
 - 内容: 'Every frame, the damage system queries for entities that have the health component and updates values on those entities’ components based on the current state of the app. If an entity has taken too much damage, the system might trigger a specific animation or remove the entity from the scene.'
   提示: ''
   翻译: '每帧刷新时，伤害系统 会查询有生命值组件的实体，并根据App当前的状态更新这些实体的组件。如果实体受到了过大的伤害，系统就会执行特殊的动画，或者将实体从场景中移除。'
