fix：SharePlay 的名词翻译

--- a/project/visionos/happybeam.yml
+++ b/project/visionos/happybeam.yml
@@ -68,17 +68,17 @@
   提示: ''
   翻译: '下述代码展示了 Happy Beam 在游戏开始时如何生成云朵，以及地面上的激光发射器的材质。因为游戏使用碰撞检测来计算得分——当碰撞时，光束会让暴躁乌云开心起来——所以你要为每个可能参与互动的模型制作碰撞体积。'
 - 内容: 'Add SharePlay support for multiplayer gaming experiences'
-  提示: ''
-  翻译: '添加 SharePlay 以支持多人游戏体验'
+  提示: 'SharePlay 的官方中译为同播共享，见 https://developer.apple.com/cn/shareplay/'
+  翻译: '添加同播共享以支持多人游戏体验'
 - 内容: 'You use the Group Activities framework in visionOS to support SharePlay during a FaceTime call. Happy Beam uses Group Activities to sync the score, active players list, and the position of each player’s projected beam.'
   提示: ''
-  翻译: '您可以在 visionOS 中通过 Group Activities 框架在 FaceTime 通话期间支持 SharePlay。Happy Beam 使用 Group Activities 来同步分数、活跃玩家列表以及每个玩家射出光束的位置。'
+  翻译: '您可以在 visionOS 中通过 Group Activities 框架在 FaceTime 通话期间支持同播共享。Happy Beam 使用 Group Activities 来同步分数、活跃玩家列表以及每个玩家射出光束的位置。'
 - 内容: 'Note'
   提示: ''
   翻译: '注意'
 - 内容: 'Developers using the Apple Vision Pro developer kit can test spatial SharePlay experiences on-device by installing the Persona Preview Profile.'
   提示: ''
-  翻译: '使用 Apple Vision Pro developer kit 的开发者可以通过安装 Persona Preview Profile 在设备上测试空间中的 SharePlay 体验。'
+  翻译: '使用 Apple Vision Pro developer kit 的开发者可以通过安装 Persona Preview Profile 在设备上测试空间中的同播共享体验。'
 - 内容: 'Use a reliable channel to send information that’s important to be correct, even if it can be slightly delayed as a result. The following shows how Happy Beam updates the game model’s score state in response to a score message:'
   提示: ''
   翻译: '使用可靠的频道发送要求正确性的信息，即使因此可能会稍有延迟。下面展示了 Happy Beam 如何根据分数信息更新游戏模型的分数状态：'
