fix：添加相关文章的链接

--- a/project/visionos/happybeam.yml
+++ b/project/visionos/happybeam.yml
@@ -3,7 +3,7 @@
   翻译: '快乐光束'
 - 内容: 'Leverage a Full Space to create a fun game using ARKit.'
   提示: ''
-  翻译: '利用 Full Space 使用 ARKit 创建有趣的游戏。'
+  翻译: '使用 ARKit 在 Full Space 中创建有趣的游戏。'
 - 内容: 'Overview'
   提示: ''
   翻译: '概述'
