--- a/project/visionos/destination-video.yml
+++ b/project/visionos/destination-video.yml
@@ -1,15 +1,15 @@
 - 内容: 'Destination Video'
   提示: ''
-  翻译: ''
+  翻译: '目的地视频'
 - 内容: 'Leverage 3D video and Spatial Audio to deliver an immersive experience.'
-  提示: ''
-  翻译: ''
+  提示: 'Spatial Audio 译为“空间音频”'
+  翻译: '利用 3D 视频和空间音频提供身临其境的体验。'
 - 内容: 'Overview'
   提示: ''
-  翻译: ''
+  翻译: '概述'
 - 内容: 'Destination Video is a multiplatform video-playback app for visionOS, iOS, and tvOS. People get a familiar media-browsing experience navigating the libraryʼs content and playing videos they find interesting. The app provides a similar experience on supported platforms, but leverages unique features of visionOS to create a novel, immersive playback experience.'
   提示: ''
-  翻译: ''
+  翻译: 'Destination Video 是一款适用于 visionOS、iOS 和 tvOS 的多平台视频播放应用。应用为用户提供了熟悉的媒体浏览体验：在图书馆中浏览内容并可以播放感兴趣的视频。该应用在所有支持的平台上提供了相近的体验，但同时也利用了 visionOS 的特有功能来创建新颖、身临其境的视听体验。'
 - 内容: 'Play video in an inline player'
   提示: ''
   翻译: ''
